# RCAIT

./: .gitignore  .gitlab-ci.yml  2021-05-21_GUI Snapshots.pptx  CMakeLists.txt  Doxyfile.cfg  GUI Snapshots.pptx  Images.qrc  RCAIT.pro  RCAIT.rc  README.md  UI_Icons.qrc  aspectratiolabel.cpp  configurationdialog.h  configurationdialog.ui  customtabbar.cpp  customtabbar.h  customtabwidget.cpp  customtabwidget.h  ejTiVe.json  globalsettingswidget.cpp  globalsettingswidget.h  globalsettingswidget.ui  imagegallery.cpp  imagegallery.h  imagegallerytree.cpp  images.ui  imagesection.cpp  imagesection.h  imagesection.ui  importfileswidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newmodeldialog.h  newmodeldialog.ui  newprojectdialog.ui  qstyleoption.h  removemodeldialog.h  removemodeldialog.ui  (+16 more)
Documentation/: Task_ReadMe.txt  requirements.txt
Documentation/doc_coverage_report/: doc-coverage.info  index-sort-l.html  index.html
FlickrPlugin/: CMakeLists.txt  FlickrAPI Tests.ipynb  echoplugin.pro
FlickrPlugin/echowindow/: CMakeLists.txt  echointerface.h  echowindow.cpp  echowindow.h  echowindow.pro  imageloaderplugin.h  main.cpp  mainwindow.ui  settings.cpp  settings.h  settings.ui
FlickrPlugin/plugin/: CMakeLists.txt  echoplugin.cpp  echoplugin.h  flickrapi_photosearch.py  flickrapi_test.py  flickrplugin.cpp  flickrplugin.h  flickrsettings.cpp  flickrsettings.h  flickrsettings.ui  plugin.pro
Google_tests/: CMakeLists.txt  classificationpluginmock.cpp  classificationpluginmock.h  imageloaderpluginmock.cpp  imageloaderpluginmock.h  settingsmanagertest.cpp  settingsmanagertest.h  test_automator.cpp  test_bingplugin.cpp  test_classificationcommand.cpp  test_classificationpluginmanager.cpp  test_classifier.cpp  test_filediff.cpp  test_flickrplugin.cpp  test_folderplugin.cpp  test_imagegallery.cpp  test_imagegallerytree.cpp  test_imageinspectionmodel.cpp  test_imageloadcommand.cpp  test_imageloader.cpp  test_imageloaderpluginmanager.cpp  test_projectmanager.cpp  test_resultgraphics.cpp  test_resultsimporter.cpp  test_settingsmanager.cpp  test_splitcommand.cpp  test_task.cpp  test_trainer.cpp  test_trainingcommand.cpp  testgui.cpp  testgui.h
Google_tests/lib/googletest/test/: googletest-output-test.py  gtest_xml_output_unittest.py
Google_tests/rsc/classresults/fun/: classification_fun.json
Google_tests/rsc/configs/: MobilNetTest_main.py  MobilNetTest_main_diff_nocolor.txt  res666_main.py  res666_main_diff_nocolor.txt
Google_tests/rsc/results/run/: training_run.json
Google_tests/rsc/tasks/: task1.json  task1_duplicate.json  task2.json  task3.json  task_invalid.json
Resources/: Images.qrc  UI_Icons.qrc  ressources.qrc
controller/: ImageController.cpp  ImageController.h  ImageInspectionWidget.cpp  ResultsController.cpp  ResultsController.h  aicontroller.cpp  aicontroller.h  automationcontroller.cpp  automationcontroller.h  configurationcontroller.cpp  configurationcontroller.h  controller.cpp  controller.h  imagecontroller.cpp  imagecontroller.h  modelcontroller.cpp  modelcontroller.h  projectcontroller.cpp  projectcontroller.h  resultscontroller.cpp  resultscontroller.h  settingscontroller.cpp  settingscontroller.h  tabcontroller.cpp  tabcontroller.h  trainingresultview.ui
doc_coverage_report/: doc-coverage.info
doc_coverage_report/rapid-classification-ai-trainer/: index-sort-l.html  (+2 more)
languages/: RCAIT_de_DE.ts  RCAIT_en_GB.ts  RCAIT_ru_RU.ts  cleanup_obsolete.py  ts2txt.py  txt2ts.py  ui-test_de_DE.ts  ui-test_en_GB.ts
model/: DataManager.cpp  DataManager.h  ProjectManager.cpp  ProjectManager.h  ce_string.h  configurationmanager.cpp  configurationmanager.h  datamanager.cpp  datamanager.h  imageinspectionmodel.cpp  imageinspectionmodel.h  mapadapt.h  modelmanager.cpp  modelmanager.h  projectmanager.cpp  projectmanager.h  settingsmanager.cpp  settingsmanager.h
plugins/: Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  classificationplugin.cpp  classificationpluginmanager.h  classificationresult.cpp  classificationresult.h  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h  result.cpp  result.h  trainingresult.cpp  trainingresult.h
plugins/classificationplugins/MMClassificationPlugin/: CMakeLists.txt  mmclassificationplugin.cpp  mmclassificationplugin.h
plugins/imageplugins/bingplugin/: CMakeLists.txt  bingapi_photosearch.py  bingplugin.cpp  bingplugin.h  bingsettings.cpp  bingsettings.h  bingsettings.ui  icons.qrc  plugin.pro
plugins/imageplugins/flickrplugin/: CMakeLists.txt  Flickr API Keys Sascha Rolinger.txt  flickrapi_photosearch.py  flickrplugin.cpp  flickrplugin.h  flickrsettings.cpp  flickrsettings.h  flickrsettings.ui  icons.qrc  plugin.pro  test.py
plugins/imageplugins/folderplugin/: CMakeLists.txt  folderconfigwidget.cpp  folderconfigwidget.h  folderconfigwidget.ui  folderplugin.cpp  folderplugin.h  icons.qrc
plugins/imageplugins/googleplugin/: .googleapi_photosearch.py.swp  CMakeLists.txt  googleapi_photosearch.py  googleimagesearch.py  googleplugin.cpp  googleplugin.h  googlesettings.cpp  googlesettings.h  googlesettings.ui  icons.qrc  key.txt  test_url_plugin.py
rapid-classification-ai-trainer/: CMakeLists.txt.gcov.html  README.md.gcov.html  [STL].gcov.html  version.h.gcov.html
view/: ImportFilesWidget.cpp  ImportFilesWidget.h  aitrainingwidget.cpp  aitrainingwidget.h  aitrainingwidget.ui  aspectratiolabel.cpp  aspectratiolabel.h  automationwidget.cpp  automationwidget.h  automationwidget.ui  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  customlistwidget.cpp  customlistwidget.h  customtabbar.cpp  customtabbar.h  customtablewidget.cpp  customtablewidget.h  customtabwidget.h  globalsettingswidget.cpp  globalsettingswidget.h  globalsettingswidget.ui  imagegallery.cpp  imagegallery.h  imagegallerytree.cpp  imagegallerytree.h  imageinspectionwidget.cpp  imageinspectionwidget.h  imageinspectionwidget.ui  imagesection.cpp  imagesection.h  importfileswidget.cpp  importfileswidget.h  importfileswidget.ui  inputimageswidget.cpp  inputimageswidget.h  inputimageswidget.ui  main.cpp  mainwindow.cpp  (+23 more)
(+728 files in other folders)
